kubernetes/ente/museum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: museum
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 2112
    targetPort: metrics
    protocol: TCP
