kubernetes/ente/museum/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: museum
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - ente-api.yuha0.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: museum
      port: 8080
    timeouts:
      request: 0s
